--- a/src/main/resources/assets/jtditemsinstructure/lang/ru_ru.json
+++ b/src/main/resources/assets/jtditemsinstructure/lang/ru_ru.json
@@ -1,3 +1,3 @@
 {
-  "jtditemsinstructure.summoned_entity_rascal": "§aLet the name begin!"
+  "jtditemsinstructure.summoned_entity_rascal": "§aДа начнётся игра!"
 }
